<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    android:background="@color/background"
    >

    <Button
        android:id="@+id/novice_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Novice" />

    <Button
        android:id="@+id/easy_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Easy" />

    <Button
        android:id="@+id/medium_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Medium" />

    <Button
        android:id="@+id/guru_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guru" />

</LinearLayout>
